src/snapshots/raoul__tests__parse_ast_has_error@invalid-return.ra.snap
---
source: src/tests.rs
expression: res.unwrap_err()
input_file: src/examples/invalid/static/invalid-return.ra
---
[
     --> 2:10
      |
    2 |   return false;␊
      |          ^---^
      |
      = Cannot cast from BOOL to INT,
]
