src/snapshots/raoul__tests__parse_ast_has_error@list-extra-index.ra.snap
---
source: src/tests.rs
expression: res.unwrap_err()
input_file: src/examples/invalid/static/list-extra-index.ra
---
[
     --> 3:3
      |
    3 |   a[3][4] = 2;␊
      |   ^---------^
      |
      = `a` is not a matrix,
     --> 4:9
      |
    4 |   print(a[3][4]);␊
      |         ^-----^
      |
      = `a` is not a matrix,
]
