src/snapshots/raoul__tests__parse_ast_has_error@mat-inconsistent-size.ra.snap
---
source: src/tests.rs
expression: res.unwrap_err()
input_file: src/examples/invalid/static/mat-inconsistent-size.ra
---
[
     --> 2:3
      |
    2 |   a = [[1], [2, 3]];␊
      |   ^---------------^
      |
      = Expecting matrix with second dimmension being 2 but received 1,
]
