src/snapshots/raoul__tests__parse_ast_has_error@missing-return.ra.snap
---
source: src/tests.rs
expression: res.unwrap_err()
input_file: src/examples/invalid/static/missing-return.ra
---
[
     --> 1:1
      |
    1 | func test(): int {␊
      | ...
    3 | }␊
      | ^
      |
      = In function test not all branches return a value,
]
