src/snapshots/raoul__tests__parse_ast_has_error@mixing-types-list.ra.snap
---
source: src/tests.rs
expression: res.unwrap_err()
input_file: src/examples/invalid/static/mixing-types-list.ra
---
[
     --> 2:12
      |
    2 |   a = [1, "3", false];␊
      |            ^
      |
      = Cannot cast from STRING to INT,
     --> 2:16
      |
    2 |   a = [1, "3", false];␊
      |                ^---^
      |
      = Cannot cast from BOOL to INT,
]
